<resources>
    <string name="app_name">Alien VS Predator</string>
    <string name="game_p1_image">p1 image</string>
    <string name="game_p2_image">p2 image</string>
    <string name="game_BTN_attack">ATTACK</string>
    <string name="game_BTN_lightAttack">Light\nAttack</string>
    <string name="game_BTN_strongAttack">Strong\nAttack</string>
    <string name="game_BTN_brutalAttack">Brutal\nAttack</string>
    <string name="game_BTN_lightAttack_p1">game_BTN_lightAttack_p1</string>
    <string name="game_BTN_StrongAttack_p1">game_BTN_StrongAttack_p1</string>
    <string name="game_BTN_BrutalAttack_p1">game_BTN_BrutalAttack_p1</string>
    <string name="game_BTN_lightAttack_p2">game_BTN_lightAttack_p2</string>
    <string name="game_BTN_StrongAttack_p2">game_BTN_StrongAttack_p2</string>
    <string name="game_BTN_BrutalAttack_p2">game_BTN_BrutalAttack_p2</string>
    <string name="main_BTN_roll">Roll</string>
    <string name="game_p2_image_dice">p2_image_dice</string>
    <string name="game_p1_image_dice">p1_image_dice</string>
    <string name="resultScreen_background_image">resultScreen_background_image</string>
    <string name="presentWinner_highScores">High Scores</string>
    <string name="openScreen_BTN_startGame">Start game</string>
    <string name="openScreen_background_image">openScreen background image</string>
    <string name="openScreen_BTN_topScores">Top scores</string>
    <string name="presentWinner_mainPage">Main Page</string>
    <string name="listView_rows_IMAGE">winner Icon</string>
    <string name="openScreen_Rejected_permission">These permission is mandatory please allow location services and enjoy the game</string>
    <string name="presentWinner_winner_predator">Predator win</string>
    <string name="presentWinner_winner_alien">Alien win</string>
</resources>