<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/game_background"
    tools:context=".Activity_Game">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:orientation="vertical"

            >

            <ProgressBar
                android:id="@+id/game_PB_p1HP"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="5dp"
                android:max="100"
                android:progressDrawable="@drawable/game_progressbar_high_hp"

                />

            <ImageView
                android:id="@+id/game_IMAGE_p1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/game_p1_image" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/game_BTN_p1_lightAttack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/game_BTN_lightAttack"
                android:textColor="@color/game_BTN_attackText"
                style="@style/AppTheme.RoundedCornerMaterialButton"
                android:tag="@string/game_BTN_lightAttack_p1"
                />

            <Button
                android:id="@+id/game_BTN_p1_strongAttack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/game_BTN_strongAttack"
                android:textColor="@color/game_BTN_attackText"
                style="@style/AppTheme.RoundedCornerMaterialButton"
                android:tag="@string/game_BTN_StrongAttack_p1"
                />

            <Button
                android:id="@+id/game_BTN_p1_brutalAttack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/game_BTN_brutalAttack"
                android:textColor="@color/game_BTN_attackText"
                style="@style/AppTheme.RoundedCornerMaterialButton"
                android:tag="@string/game_BTN_BrutalAttack_p1"
                />



        </LinearLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="30">



            <TextView
                android:id="@+id/game_LBL_attackInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:textColor="@color/game_BTN_background"
                />
            <ImageView
                android:id="@+id/game_IMAGE_p1_dice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:contentDescription="@string/game_p1_image_dice" />

            <ImageView
                android:id="@+id/game_IMAGE_p2_dice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="15dp"
                android:contentDescription="@string/game_p2_image_dice" />

            <Button
                android:id="@+id/game_BTN_rollDices"
                android:text="@string/main_BTN_roll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="20dp"
                style="@style/AppTheme.RoundedCornerMaterialButton"
                />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >


            <Button
                android:id="@+id/game_BTN_p2_lightAttack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/game_BTN_lightAttack"
                android:textColor="@color/game_BTN_attackText"
                style="@style/AppTheme.RoundedCornerMaterialButton"
                android:tag="@string/game_BTN_lightAttack_p2"
                />

            <Button
                android:id="@+id/game_BTN_p2_strongAttack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/game_BTN_strongAttack"
                android:textColor="@color/game_BTN_attackText"
                style="@style/AppTheme.RoundedCornerMaterialButton"
                android:tag="@string/game_BTN_StrongAttack_p2"
                />

            <Button
                android:id="@+id/game_BTN_p2_brutalAttack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/game_BTN_brutalAttack"
                android:textColor="@color/game_BTN_attackText"
                style="@style/AppTheme.RoundedCornerMaterialButton"
                android:tag="@string/game_BTN_BrutalAttack_p2"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="10">

            <ProgressBar
                android:id="@+id/game_PB_p2HP"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:progressDrawable="@drawable/game_progressbar_high_hp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="5dp"
                android:max="100"


                />

            <ImageView
                android:id="@+id/game_IMAGE_p2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/game_p2_image" />

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>