<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_OpenScreen">


    <ImageView
        android:id="@+id/openScreen_IMAGE_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:contentDescription="@string/openScreen_background_image" />

    <Button
        android:id="@+id/openScreen_BTN_startGame"
        android:tag="openScreen_BTN_startGame"
        android:layout_width="match_parent"
        android:text="@string/openScreen_BTN_startGame"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/openScreen_BTN_topScores"
        android:layout_marginBottom="5dp"
        style="@style/AppTheme.RoundedCornerMaterialButton"
        />

    <Button
        android:id="@+id/openScreen_BTN_topScores"
        android:tag="openScreen_BTN_topScores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/openScreen_BTN_topScores"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        style="@style/AppTheme.RoundedCornerMaterialButton"
        />

</RelativeLayout>