<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Activity_PresentWinner"
    >
    <ImageView
        android:id="@+id/resultScreen_IMAGE_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:contentDescription="@string/resultScreen_background_image" />

    <TextView
        android:id="@+id/presentWinner_LBL_winnerInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:typeface="monospace"
        android:textSize="20sp"
        android:textColor="@color/presentWinner_LBL_winnerDetails"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        >

        <Button
            android:id="@+id/presentWinner_BTN_toHighScores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/presentWinner_highScores"
            style="@style/AppTheme.RoundedCornerMaterialButton"
            android:tag="presentWinner_BTN_toHighScores"
            />

        <Button
            android:id="@+id/presentWinner_BTN_toMainPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/presentWinner_mainPage"
            style="@style/AppTheme.RoundedCornerMaterialButton"
            android:tag="presentWinner_BTN_toMainPage"

            />

    </LinearLayout>
</RelativeLayout>